# energy-system-modelling

./: README.md
backend/: .gitignore  docker-compose.yml  manage.py  pyproject.toml
backend/core/admin/: __init__.py  energy_plant.py
backend/core/migrations/: 0001_initial.py  0002_alter_energyplant_project_id.py
backend/core/models/: __init__.py  energy_plant.py
backend/core/resources/: __init__.py  energy_plant.py
backend/core/serializers/: __init__.py  energy_plant.py
backend/core/views/: __init__.py  energy_plant.py
backend/energy_sim/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx
frontend/src/app/auth/signIn/: page.tsx
frontend/src/app/dashboard/: layout.tsx
frontend/src/app/dashboard/overview/: page.tsx
frontend/src/app/dashboard/overview/components/: OverviewMap.tsx
frontend/src/app/privacy-policy/: page.tsx
frontend/src/app/terms-and-conditions/: page.tsx
frontend/src/components/: Logo.tsx
